--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "fuse.js": "^7.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
